--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /target/
 !.mvn/wrapper/maven-wrapper.jar
 
+.mvn
+
 ### STS ###
 .apt_generated
 .classpath
@@ -23,3 +25,7 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+
+*.zip
+*.log
+nbactions.xml
